--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "joi": "^13.4.0",
     "joi-browser": "^13.4.0",
     "joi-multiaddr": "^2.0.0",
-    "libp2p": "~0.23.1",
+    "libp2p": "libp2p/js-libp2p#master",
     "libp2p-bootstrap": "~0.9.3",
     "libp2p-crypto": "~0.14.0",
     "libp2p-kad-dht": "~0.10.6",
