test: enable dht core test

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "execa": "^1.0.0",
     "form-data": "^2.3.3",
     "hat": "0.0.3",
-    "interface-ipfs-core": "~0.84.2",
+    "interface-ipfs-core": "ipfs/interface-ipfs-core#fix/dht-put-and-get",
     "ipfsd-ctl": "~0.39.5",
     "ncp": "^2.0.0",
     "qs": "^6.5.2",
