--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ipfs",
-  "version": "0.33.1",
+  "name": "@jimpick/ipfs",
+  "version": "0.33.1-1",
   "description": "JavaScript implementation of the IPFS specification",
   "leadMaintainer": "Alan Shaw <alan@tableflip.io>",
   "bin": {
@@ -122,7 +122,7 @@
     "joi": "^13.4.0",
     "joi-browser": "^13.4.0",
     "joi-multiaddr": "^2.0.0",
-    "libp2p": "~0.23.1",
+    "@jimpick/libp2p": "^0.24.0-1",
     "libp2p-bootstrap": "~0.9.3",
     "libp2p-crypto": "~0.14.0",
     "libp2p-kad-dht": "~0.10.6",
